/* Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

ext {
    geodeVersion = '1.4.0'
    junitVersion = '4.12'
    sparkVersion = '2.4.0'
    scalaVersion = '2.11.8'
    scalaLog4jVersion = '11.0'
    scalaCompatVersion = '0.8.0'
    junitVersion = '4.12'
    scalaTestVersion = '3.0.5'
    mockitoVersion = '2.16.0'
}


description = 'Apache Spark Learning'
version = '1.0.0'

configurations.all {

}

allprojects {
    apply plugin: "idea"
    apply plugin: 'java'
    apply plugin: 'scala'
    apply plugin: 'maven'

    group = 'com.iamninad.learning'
    sourceCompatibility = 1.8
    targetCompatibility = 1.8


    dependencies {
        compile "org.apache.geode:geode-core:$geodeVersion"
        compile "org.apache.geode:geode-cq:$geodeVersion"
        compile "org.apache.spark:spark-core_2.11:$sparkVersion"
        testCompile "org.apache.spark:spark-core_2.11:$sparkVersion"
        compile "org.apache.spark:spark-sql_2.11:$sparkVersion"
        compile "org.apache.spark:spark-hive_2.11:$sparkVersion"
        compile "org.apache.spark:spark-streaming_2.11:$sparkVersion"
        compile "org.apache.spark:spark-mllib_2.11:$sparkVersion"
        compile ("com.fasterxml.jackson.core:jackson-core:2.6.7") {
            force = true
        }
        compile ("com.fasterxml.jackson.core:jackson-databind:2.6.7.1") {
            force = true
        }
        compile ("com.fasterxml.jackson.module:jackson-module-scala_2.11:2.6.7") {
            force = true
        }
        compile "org.scala-lang.modules:scala-java8-compat_2.11:$scalaCompatVersion"
        compile "org.apache.geode.spark.connector:geode-functions:1.0.0.SNAPSHOT"
        compile "org.apache.geode.spark.connector:geode-spark-connector:1.0.0.SNAPSHOT"
        testCompile "org.apache.hbase:hbase-client:2.1.0"
        compile "org.apache.hbase:hbase-mapreduce:2.1.0"

        testCompile(group:'org.apache.hbase', name:'hbase-mapreduce', version:'2.1.0')

        testCompile(group:'org.apache.hbase', name:'hbase-testing-util', version:'2.1.0', classifier: "tests")
        testCompile(group:"org.apache.hadoop",name: "hadoop-common", version: "2.8.3", classifier:"tests")
        testCompile(group:"org.apache.hadoop" , name:"hadoop-hdfs", version: "2.8.3", classifier: "tests")
        testCompile(group:"org.apache.hadoop", name:"hadoop-hdfs", version: "2.8.3")
        testCompile(group:"org.apache.hbase", name: "hbase", version: "2.1.0")
        testCompile(group:"org.apache.hbase", name: "hbase-common", version: "2.1.0")
        testCompile "com.holdenkarau:spark-testing-base_2.11:2.4.0_0.11.0"
        testCompile "junit:junit:$junitVersion"
        testCompile "org.scalatest:scalatest_2.11:$scalaTestVersion"
        testCompile "org.mockito:mockito-core:$mockitoVersion"



        compile "org.apache.logging.log4j:log4j-api-scala_2.11:$scalaLog4jVersion"
        compile "org.scala-lang:scala-library:$scalaVersion"
    }
    repositories {

        mavenCentral()
        mavenLocal()
    }
    sourceSets {
        main {
            scala {
                srcDirs = ['src/main/scala', 'src/main/java']
            }
            java {
                srcDirs = []
            }
        }
    }
}

project(":domain-models"){

}

project(":spark-learnings") {
    dependencies {
        compile project(":domain-models")
    }


    test {
        jvmArgs '-Xms512M -Xmx2048m -XX:MaxPermSize=2048m -XX:+CMSClassUnloadingEnabled'
    }
}